--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800&family=Poppins:wght@200;300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <title>Yusuf Ali</title>
   </head>
   <body>
